config/web-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: system
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    control-plane: login
