config/web-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-service
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - idp.do.storageos.net
    secretName: ingress-cert
  rules:
  - host: idp.do.storageos.net
    http:
      paths:
      - path: /baz/
        pathType: Exact
        backend:
          service:
            name: web-service
            port:
              number: 443

--
apiVersion: v1
kind: Secret
metadata:
  annotations:
metadata:
  name: ingress-cert
  namespace: system
type: kubernetes.io/tls
